--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,14 +51,11 @@
 main {
     display: flex;
     flex-wrap: wrap;
-
+color:antiquewhite
 }
 
 
 .card {
-    color: antiquewhite;
-    display: flex;
-    flex-wrap: wrap;
     padding: 10px;
     border-style: solid;
     border-width: 1px;
@@ -72,10 +69,7 @@ main {
 }
 
  .card2{
-        color: antiquewhite;
         background-color: black;
-        display: flex;
-        flex-wrap: wrap;
         padding: 10px;
         border-style: solid;
         border-width: 1px;
@@ -87,10 +81,7 @@ main {
 
 
     .card3 {
-        color: antiquewhite;
         background-color: black;
-        display: flex;
-        flex-wrap: wrap;
         padding: 10px;
         border-style: solid;
         border-width: 1px;
