--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,21 @@
+/* Style for Main Page */
+
 * {
     margin: 5px;
     Padding: 0;
 }
 
+
+html {
+    height: 100%;
+    background-color: rgb(154, 152, 152);
+    flex-wrap: wrap;
+}
+
+/* Style for header */
 .hero {
     margin-bottom: 0;
-    background-image: url("/assets/image/primary-header-img1.jpg");
+    background-image: url("/assets/image/deskback.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -14,14 +24,24 @@
 
 }
 
+/* To make images round/add border */
+
+img {
+    border-radius: 50%;
+    border: 5px solid #ffffff;
+  }
+
+
+  /* Styling for Navbar */
+
 .navbar {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    background-color: rgb(80, 101, 94);
+    background-color: rgb(90, 103, 112);
     color: antiquewhite;
-    font-family: Goudy Old Style;
-   
+    font-family: Segoe Script;
+
 
 
 }
@@ -37,21 +57,27 @@
     color: antiquewhite;
 }
 
+.header {
+    font-family: Segoe Script;
+}
 
 
 .about {
     color: antiquewhite;
     flex-wrap: wrap;
     justify-content: space-between;
-    font-family: Goudy Old Style;
+   
 
 
 }
 
+/* Styling for Work Section/project cards */
+
 main {
     display: flex;
     flex-wrap: wrap;
-color:antiquewhite
+color:antiquewhite;
+font-family: Segoe Script;
 }
 
 
@@ -62,14 +88,14 @@ color:antiquewhite
     justify-content: space-evenly;
     text-align: center;
     font-family: Segoe Script;
-    min-height: 400px;
-    flex-basis: 100%;
     background-color: black;
+    flex-basis: calc(50%-1em);
+
 
 }
 
  .card2{
-        background-color: black;
+        background-color: rgb(0, 0, 0);
         padding: 10px;
         border-style: solid;
         border-width: 1px;
@@ -91,17 +117,14 @@ color:antiquewhite
         flex-basis: calc(50%-1em);
     }
 
+
+    /* Styling for contact */
     .contact {
         color: antiquewhite;
         flex-wrap: wrap;
         justify-content: space-between;
-        font-family: Goudy Old Style;
-
+        font-family: Segoe Script;
 
     }
 
-    html {
-        height: 100%;
-        background-color: rgb(10, 47, 25);
-        flex-wrap: wrap;
-    }
+
